--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@percy/cli": "^1.31.4",
+    "@percy/playwright": "^1.0.9",
     "@playwright/test": "^1.56.1",
     "@types/node": "^24.10.1"
   }
