--- a/.lighthouserc.json
+++ b/.lighthouserc.json
@@ -2,16 +2,18 @@
   "ci": {
     "collect": {
       "numberOfRuns": 3,
-      "url": ["https://thapas-technical.myshopify.com/?password=${ss}"],
+      "url": [
+        "https://thapas-technical.myshopify.com/?password=${STORE_PASSWORD}"
+      ],
       "settings": {
         "chromeFlags": "--no-sandbox --headless"
       }
     },
     "assert": {
       "assertions": {
-        "categories:performance": ["error", {"minScore": 0.9}],
-        "categories:accessibility": ["error", {"minScore": 0.9}],
-        "categories:seo": ["warn", {"minScore": 0.8}]
+        "categories:performance": ["error", { "minScore": 0.9 }],
+        "categories:accessibility": ["error", { "minScore": 0.9 }],
+        "categories:seo": ["warn", { "minScore": 0.8 }]
       }
     },
     "upload": {
