--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@percy/cli": "^1.31.4",
     "@percy/playwright": "^1.0.9",
     "@playwright/test": "^1.56.1",
-    "@types/node": "^24.10.1"
+    "@types/node": "^24.10.1",
+    "lighthouse": "^13.0.1"
   }
 }
