--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@lhci/cli": "^0.15.1",
     "@percy/cli": "^1.31.4",
     "@percy/playwright": "^1.0.9",
     "@playwright/test": "^1.56.1",
